# Nervana

./: .gitignore  README.md  proposal.md  proposal_v2.md
posts/: 一个 38 岁工程师如何攻克 PyTorch FSDP.md
topics/distributed-training/pt-fsdp/: FSDP_README.md  INFERENCE_TEST_SUMMARY.md  README.md  pyproject.toml  pytorch_example.py  run_fsdp.sh  run_inference_test.sh  test_model_inference.py  train_baseline.py  train_fsdp.py
topics/distributed-training/pt-fsdp/docs/: inference_test_guide.md
topics/distributed-training/pt-fsdp/examples/: quick_inference_test.py
